<resources>
    <string name="app_name">GridMeasure</string>

    <!--MainActivity screen-->
    <string name="button_main_goToTakePicture">Test taking a picture</string>
    <string name="button_main_goToTakePictureTEST">Test bounding box</string>
    <string name="test_bluetooth">Test bluetooth</string>
    <string name="button_main_goToCalibrateCamera">Calibrate Camera</string>

    <!--TakePictureActivity screen-->
    <string name="button_takePicture_camera">Take a picture</string>
    <string name="button_takePicture_accept">Accept outline</string>
    <string name="button_takePicture_transform">Transform shape</string>
    <string name="takePicture_imageView_description">Current Picture</string>
    <string name="takePicture_magnifyingGlass_description">Magnifying Glass</string>


    <!--CalculationActivity screen-->
    <string name="button_calculation_newJob">Cancel calculation and start a new cut job</string>
    <string name="button_calculation_sendToCutter">Send measurements to cutter</string>
    <string name="calculation_loadingMessage">Calculating measurements...</string>


    <!--SendMeasurementActivity screen-->
    <string name="button_showMeasurement_sendToCutter">Send measurements to cutter</string>
    <string name="button_showMeasurement_extendEdges">Extend edges (inches)</string>


    <!--TakePictureActivity Popup menu options-->
    <string name="takePicture_popupMenu_deletePoint">Delete Point</string>
    <string name="takePicture_popupMenu_addPoint">Add another Point</string>
    <string name="takePicture_popupMenu_cancel">Cancel</string>


    <!--BluetoothActivity screen-->
    <string name="button_bluetooth_sendData">Send Data</string>
    <string name="bluetooth_selectCutter">Select Cutter:</string>
    <string name="bluetooth_sendDataTextHint">Data to send</string>
    <string name="bluetooth_receivedDataHeader">Received Data:</string>
    <string name="bluetooth_receivedDataStartText">No data received yet.</string>
    <string name="bluetooth_refreshDescriptor">Refresh</string>


    <!--Calibrate Camera screen-->
    <string name="button_Calibration_picture">Take at least 5 Calibration Pictures</string>
    <string name="button_Calibration_add_pictures">Take another photo</string>
    <string name="button_Calibration_finish">Finish</string>
    <string name="CalibrateCamera_imageView_description">Current Picture</string>


    <!--D-Pad content description-->
    <string name="dPad_UpArrow_description">Up</string>
    <string name="dPad_DownArrow_description">Down</string>
    <string name="dPad_LeftArrow_description">Left</string>
    <string name="dPad_RightArrow_description">Right</string>


    <!--Warning/Error Messages-->
    <string name="warn_no_camera">No camera app was found.\nYou must have a camera app installed to use this app</string>
    <string name="warn_3_points">You must keep at least 3 points</string>
    <string name="warn_bluetooth_emptyMessage">You can\'t send an empty message</string>
    <string name="warn_bluetooth_messageTooBig">The message is too big</string>
    <string name="warn_bluetooth_noPairedDeviceSelected">You must select a paired to device before sending data</string>
    <string name="error_file_save">Error creating a file to save picture to</string>
    <string name="error_picture_rotation">Error detecting orientation of picture</string>
    <string name="error_noBluetooth">Bluetooth not available on this device</string>
    <string name="error_noAcceptableCornerFound">The shape you outlined has no acceptable bottom left corner</string>
    <string name="error_noAcceptableTransformation">The shape you outlined could not be rotated successfully</string>
    <string name="error_charucoFailed">No ChArUco board was detected.\nPlease try again</string>
    <string name="error_transformFailed">The outlined shaped doesn\'t seem to be valid.\nPlease try again</string>
    <string name="error_ioExceptionConvertingPts">There was an IO Exception converting the points</string>
</resources>
