<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/takePicture_linearLayout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.psu.armstrong1.gridmeasure.TakePictureActivity">
    <FrameLayout
        android:id="@+id/takePicture_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/takePicture_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/takePicture_imageView_description" />

        <edu.psu.armstrong1.gridmeasure.PolygonView
            android:id="@+id/polygonView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/takePicture_magnifyingGlass"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right|top"
            android:contentDescription="@string/takePicture_magnifyingGlass_description"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_takePicture"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_takePicture_camera"
            android:onClick="dispatchTakePictureIntent"/>


        <Button
            android:id="@+id/button_acceptOutline"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_takePicture_accept"
            android:onClick="dispatchCalculationIntent"
            android:visibility="gone"/>


        <Button
            android:id="@+id/button_transform"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_takePicture_transform"
            android:onClick="detectCornersAndTransform"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
