<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.psu.armstrong1.gridmeasure.MainActivity">

    <Button
        android:id="@+id/button_main_goToTakePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_goToTakePicture"
        android:onClick="takePicture"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/button_main_goToTakePictureTEST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_goToTakePictureTEST"
        android:onClick="takePictureTest"
        android:layout_below="@id/button_main_goToTakePicture"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/button_main_goToBluetoothTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_bluetooth"
        android:onClick="testBluetooth"
        android:layout_below="@id/button_main_goToTakePictureTEST"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_main_goToBluetoothTest"
        android:layout_centerHorizontal="true"
        android:onClick="calibrateCamera"
        android:text="@string/button_main_goToCalibrateCamera" />
</RelativeLayout>
