<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bluetooth_topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.psu.armstrong1.gridmeasure.BluetoothActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bluetooth_selectCutter"
            android:textIsSelectable="false" />

        <Spinner
            android:id="@+id/bluetooth_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/button_bluetooth_updateBluetooth"
            android:layout_width="@dimen/abc_action_button_min_width_material"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:contentDescription="@string/bluetooth_refreshDescriptor"
            android:onClick="updateBluetoothSpinner"
            android:src="@mipmap/refresh_button"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <EditText
        android:id="@+id/bluetooth_sendDataEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textMultiLine"
        android:hint="@string/bluetooth_sendDataTextHint"
        android:layout_gravity="center"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fadeScrollbars="false"/>


    <ScrollView
        android:id="@+id/bluetooth_sendDataScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fadeScrollbars="false"
        android:paddingTop="5dp">
        <TextView
            android:id="@+id/bluetooth_sendDataTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bluetooth_sendDataTextHint"
            android:layout_gravity="center"/>
    </ScrollView>


    <Button
        android:id="@+id/button_bluetooth_sendData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_bluetooth_sendData"
        android:onClick="sendData"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_receivedDataHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="false" />

    <ScrollView
        android:id="@+id/bluetooth_receivedDataScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fadeScrollbars="false"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/bluetooth_receivedDataTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_receivedDataStartText"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"/>
    </ScrollView>

</LinearLayout>
