<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calculation_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.psu.armstrong1.gridmeasure.CalculationActivity">

    <TextView
        android:id="@+id/calculation_topText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/calculation_loadingMessage"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:id="@+id/calculation_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_sendMeasurements"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_calculation_sendToCutter"
            android:onClick="dispatchSendMeasurements"
            android:visibility="gone"/>


        <Button
            android:id="@+id/button_newJob"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_calculation_newJob"
            android:onClick="dispatchNewJob"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/calculation_progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/calculation_topText"
        android:layout_above="@id/calculation_linearLayout"
        android:onClick="endCalculation"/>


</RelativeLayout>
